# endgame-fen-generator

./: .gitignore  README.md  extract_training_positions.py  pyproject.toml  requirements.txt
examples/: balanced_rook_endgames_qgd.yaml
tests/: test_evaluation.py  test_extractor.py  test_filters.py  test_pipeline.py
training_positions/: __init__.py  candidate_reader.py  candidate_writer.py  cli.py  config.py  eval_cache.py  evaluation.py  extractor.py  filters.py  header_filter.py  models.py  output.py  phase_gate.py  pipeline.py  scoring.py  sources.py
